#116 Slight rework of the pulls display, default color selection now uses the new picker.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -266,8 +266,12 @@ html, body, #map, #app, .wrapper {
 }
 
 .route_manipulation_tools .draw_element .bootstrap-select,
-.route_manipulation_tools .draw_element button {
+.route_manipulation_tools .draw_element div {
     height: 100%;
+}
+
+.route_manipulation_tools .draw_element .pickr {
+    flex: 1 1 auto;
 }
 
 .route_manipulation_tools .draw_icon.leaflet-disabled .col,
