--- a/resources/assets/js/handlebars/map_controls_route_edit_freedraw_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_freedraw_template.handlebars
@@ -1,7 +1,9 @@
 <div class="col draw_element">
     <div class="ml-1 mr-1">
-        <input id="edit_route_freedraw_options_color" class="form-control" name="edit_route_freedraw_options_color"
-               type="color" value="{{ color }}">
+        <button id="edit_route_freedraw_options_color"
+             class="btn w-100" style="background-color: {{color}}">
+
+        </button>
     </div>
 </div>
 
