--- a/resources/assets/js/handlebars/thumbnailcarousel_template.handlebars
+++ b/resources/assets/js/handlebars/thumbnailcarousel_template.handlebars
@@ -1,5 +1,5 @@
 <div class="owl-carousel owl-theme">
     {{#items}}
-    <img src="{{src}}"/>
+    <img src="{{src}}" loading="lazy"/>
     {{/items}}
 </div>
