--- a/resources/assets/js/handlebars/map_controls_route_edit_freedraw_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_freedraw_template.handlebars
@@ -1,5 +1,5 @@
 <div class="col draw_element">
-    <div class="ml-1 mr-1">
+    <div class="ml-1 mr-1 h-100">
         <button id="edit_route_freedraw_options_color"
              class="btn w-100" style="background-color: {{color}}">
 
