--- a/resources/assets/js/handlebars/map_enemy_forces_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template.handlebars
@@ -1,4 +1,4 @@
-<div id="map_enemy_forces" class="col-6 m-auto text-center font-weight-bold" data-toggle="tooltip">
+<div id="map_enemy_forces" class="col-6 m-auto text-center font-weight-bold text-" data-toggle="tooltip">
     <span id="map_enemy_forces_numbers">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
