#275 Added grapick library for selecting of gradient and applying its color to all killzones.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,3 +35,5 @@
 @import "~noty/src/themes/bootstrap-v4.scss";
 // Pickr
 @import "~@simonwep/pickr/dist/themes/nano.min.css";
+// Grapick
+@import "~grapick/dist/grapick.min.css";
