#116 Killzones can now be created by selecting an enemy that is not under killzone control.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -19,7 +19,8 @@
                                 <i class="fa" aria-hidden="true"></i>
                             </button>
                         </div>
-                        <div class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}">
+                        <div id="map_killzonessidebar_killzone_{{id}}_kill_area_label"
+                             class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}">
                             <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
                                     class="btn btn-primary" data-toggle="button" aria-pressed="false">
                                 <i class="fas fa-bullseye"></i>
