#116 Fixed double delete issue; fixed indices not being updated properly in the sidebar.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -3,9 +3,9 @@
         <div class="card-body selectable">
             <div class="row mb-1">
                 <div class="col">
-                    <h5 id="map_killzonessidebar_killzone_{{id}}_title"
-                        class="card-title map_killzonessidebar_killzone_text {{text-class}}">
-
+                    <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
+                        <span id="map_killzonessidebar_killzone_{{id}}_index"></span>:
+                        <span id="map_killzonessidebar_killzone_{{id}}_enemies"></span>
                     </h5>
                 </div>
             </div>
