#292 Viewing a route now properly shows the pulls header text.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
@@ -5,9 +5,9 @@
                 <div class="col">
                     <div class="input-group">
                         <div class="input-group-append mr-1 map_killzonessidebar_killzone_fill_space">
-                            <h5 id="map_killzonessidebar_killzone_{{id}}_title"
-                                class="card-title map_killzonessidebar_killzone_text {{text-class}}">
-
+                            <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
+                                <span id="map_killzonessidebar_killzone_{{id}}_index"></span>:
+                                <span id="map_killzonessidebar_killzone_{{id}}_enemies"></span>
                             </h5>
                         </div>
                         <div class="input-group-append mr-1" style="width: 32px; background-color: {{color}};">
