#295 MDT importer now supports importing Awakened Obelisks

--- a/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
@@ -5,6 +5,6 @@
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item dungeonroute-clone cursor-pointer" data-publickey="{{public_key}}"><i class="fas fa-clone"></i> {{clone_label}}</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item dungeonroute-delete text-danger cursor-pointer" data-publickey="{{public_key}}"><i class="fas fa-minus"></i> {{delete_label}}</a>
+        <a class="dropdown-item dungeonroute-delete text-danger cursor-pointer" data-publickey="{{public_key}}"><i class="fas fa-trash"></i> {{delete_label}}</a>
     </div>
 </div>
