#300 Added support for permanent tooltips.

--- a/resources/assets/js/handlebars/map_map_icon_edit_popup_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_edit_popup_template.handlebars
@@ -16,5 +16,11 @@
             {{/select}}
         </select>
     </div>
+    <div class="form-group">
+        <label for="map_map_icon_edit_popup_permanent_tooltip_{{id}}">{{map_icon_permanent_tooltip_label}}</label>
+        <input type="checkbox" class="form-control left_checkbox" value="{{permanent_tooltip}}"
+               id="map_map_icon_edit_popup_permanent_tooltip_{{id}}"
+               name="map_map_icon_edit_popup_permanent_tooltip_{{id}}"/>
+    </div>
     <button id="map_map_icon_edit_popup_submit_{{id}}" class="btn btn-info" type="button">{{submit_label}}</button>
 </div>
