#306 Enemies that are not in your pulls are now faded out

--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -1,4 +1,4 @@
-<div style="position: relative;">
+<div class="{{root_classes}}" style="position: relative;">
     {{#each modifiers}}
     <div class="modifier {{classes}}" style="left: {{left}}px; top: {{top}}px;">
         {{{html}}}
