--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -548,6 +548,10 @@ html, body, #map, #app, .wrapper {
     background-blend-mode: luminosity;
 }
 
+.map_enemy_visual_fade {
+    opacity: 40%;
+}
+
 .enemy_icon_npc_mdt {
     background-color: hotpink;
 }
