#306 Add seasonal index handling. Added current affix display to try screens. Affixes are now mandatory but are selected by default.

--- a/resources/assets/css/home.css
+++ b/resources/assets/css/home.css
@@ -236,6 +236,10 @@
     margin-bottom: 0;
 }
 
+#try_modal .modal-dialog {
+    max-width: 600px;
+}
+
 .modal .probootstrap-modal-flex .probootstrap-modal-content {
     width: 100%;
     padding: 40px;
