--- a/resources/assets/js/handlebars/map_enemy_popup_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_popup_template.handlebars
@@ -25,6 +25,11 @@
                id="enemy_edit_popup_enemy_forces_override_{{id}}" name="enemy_edit_popup_enemy_forces_override_{{id}}"/>
     </div>
     <div class="form-group">
+        <label for="enemy_edit_popup_seasonal_index_{{id}}">{{enemy_popup_seasonal_index_label}}</label>
+        <input type="text" class="form-control"
+               id="enemy_edit_popup_seasonal_index_{{id}}" name="enemy_edit_popup_seasonal_index_{{id}}"/>
+    </div>
+    <div class="form-group">
         <label for="enemy_edit_popup_npc_{{id}}">{{npc_label}}</label>
         <select data-live-search="true" class="selectpicker popup_select" data-width="300px"
                 id="enemy_edit_popup_npc_{{id}}" name="enemy_edit_popup_npc_{{id}}">
