--- a/resources/assets/js/handlebars/release_copy_to_reddit.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_reddit.handlebars
@@ -1,1 +1,8 @@
 [https://keystone.guru/release/{{ version }}](https://keystone.guru/release/{{ version }})
+{{#each categories }}
+{{category}}
+{{#each changes}}
+    {{#ifCond ticket_id '>' 0 }}* [\#{{ticket_id}}](https://github.com/Wotuu/keystone.guru/issues/{{ticket_id}}) {{/ifCond}}{{change}}
+{{/each}}
+
+{{/each}}
