#326 Releases can now easily be copied to clipboard for different channels (admins only).

--- a/resources/assets/js/handlebars/release_copy_to_discord.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_discord.handlebars
@@ -1,4 +1,4 @@
-{{ version }} (https://keystone.guru/release/{{ version }})
+{{ version }} ({{ date }})(https://keystone.guru/release/{{ version }})
 {{#each categories }}
 {{category}}
 {{#each changes}}
