#331 Minor fixes and added release 3.0.6

--- a/resources/assets/js/handlebars/release_copy_to_discord.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_discord.handlebars
@@ -1,4 +1,8 @@
 {{ version }} ({{ date }})(https://keystone.guru/release/{{ version }})
+{{#ifCond description '!=' null}}
+{{description}}
+
+{{/ifCond}}
 {{#each categories }}
 {{category}}
 {{#each changes}}
