--- a/resources/assets/js/handlebars/release_copy_to_reddit.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_reddit.handlebars
@@ -1,5 +1,9 @@
 {{ version }} ({{ date }})
 [https://keystone.guru/release/{{ version }}](https://keystone.guru/release/{{ version }})
+{{#ifCond description '!=' null}}
+{{description}}
+
+{{/ifCond}}
 {{#each categories }}
 {{category}}
 {{#each changes}}
