#330 Pulls load globally, but there's still an issue with loading killzones when switching floors.

--- a/resources/assets/js/handlebars/release_copy_to_discord.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_discord.handlebars
@@ -4,7 +4,7 @@
 
 {{/ifCond}}
 {{#each categories }}
-{{category}}
+{{category}}:
 {{#each changes}}
 {{#ifCond ticket_id '>' 0 }}* #{{ticket_id}} {{/ifCond}}{{change}}
 {{/each}}
