--- a/resources/assets/js/handlebars/release_copy_to_github.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_github.handlebars
@@ -3,7 +3,7 @@
 
 {{/ifCond}}
 {{#each categories }}
-{{category}}
+{{category}}:
 {{#each changes}}
 {{#ifCond ticket_id '>' 0 }}* #{{ticket_id}} {{/ifCond}}{{change}}
 {{/each}}
