--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -20,14 +20,15 @@
                             </button>
                         </div>
                         <div id="map_killzonessidebar_killzone_{{id}}_kill_area_label"
-                             class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}">
+                             class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}"
+                             data-haskillarea="{{ has_kill_area }}">
                             <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
                                     class="btn btn-primary" data-toggle="button" aria-pressed="false">
                                 <i class="fas fa-bullseye"></i>
                             </button>
                         </div>
                         <button id="map_killzonessidebar_killzone_{{id}}_color"
-                             class="btn map_killzonessidebar_color_btn w-100">
+                                class="btn map_killzonessidebar_color_btn w-100">
 
                         </button>
                         <div class="input-group-append ml-1" data-toggle="tooltip" title="{{delete_killzone_label}}">
