--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,8 +28,6 @@
 @import "~intro.js/themes/introjs-dark.css";
 // Password strength meter
 @import "~password-strength-meter/dist/password.min.css";
-// Malihu custom scrollbar plugin
-@import "~malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css";
 // Noty
 @import "~noty/src/noty.scss";
 @import "~noty/src/themes/bootstrap-v4.scss";
@@ -37,3 +35,5 @@
 @import "~@simonwep/pickr/dist/themes/nano.min.css";
 // Grapick
 @import "~grapick/dist/grapick.min.css";
+// Simplebar
+@import "~simplebar/dist/simplebar.min.css";
