--- a/resources/assets/js/handlebars/map_popup_type_select_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_select_template.handlebars
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}</label>
+    <label class="font-weight-bold" for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}:</label>
     <select id="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}" class="selectpicker popup_select"
             data-live-search="{{live_search}}" data-width="300px">
         {{#select value}}
