--- a/resources/assets/js/handlebars/map_popup_type_text_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_text_template.handlebars
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}</label>
+    <label class="font-weight-bold" for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}:</label>
     <input type="text" class="form-control"
            id="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}"
            name="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}"
