--- a/resources/assets/js/handlebars/map_popup_type_textarea_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_textarea_template.handlebars
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}</label>
+    <label class="font-weight-bold" for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}:</label>
     <textarea class="form-control" cols="50" rows="5"
               name="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}"
               id="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{value}}</textarea>
