--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -5,8 +5,8 @@
     </div>
     {{/each}}
     <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
-        <div class="{{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}}; border: {{outer_border}};">
-            <div class="{{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;">
+        <div class="outer {{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}}; border: {{outer_border}};">
+            <div class="inner {{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;">
                 {{{main_visual_html}}}
             </div>
         </div>
