--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -1,47 +1,56 @@
 <div id="map_killzonessidebar_killzone_{{id}}" class="form-group map_killzonessidebar_killzone" data-id="{{id}}">
     <div class="card">
         <div class="card-body selectable">
-            <div class="row mb-1">
-                <div class="col">
-                    <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
-                        <span id="map_killzonessidebar_killzone_{{id}}_index"></span>:
+            <div class="row no-gutters">
+                <div class="col-auto pt-1">
+                    <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
+                            class="btn btn-primary collapsed" aria-pressed="false" data-toggle="collapse"
+                            data-target="#map_killzonessidebar_killzone_{{id}}_toggle_target">
+                        <i class="fa" aria-hidden="true"></i>
+                        <span id="map_killzonessidebar_killzone_{{id}}_index" style="font-size: 1em"></span>
+                    </button>
+                </div>
+
+                <div class="col p-2">
+                    <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}} pt-1">
                         <span id="map_killzonessidebar_killzone_{{id}}_enemies"></span>
+                        (<span class="text-success">+<span id="map_killzonessidebar_killzone_{{id}}_enemy_forces"></span></span>)
                     </h5>
                 </div>
-            </div>
-            <div class="row mb-1">
-                <div class="col">
-                    <div class="input-group">
-                        <div class="input-group-prepend mr-1" data-toggle="tooltip" title="{{show_enemies_label}}">
-                            <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
-                                    class="btn btn-primary collapsed" aria-pressed="false" data-toggle="collapse"
-                                    data-target="#map_killzonessidebar_killzone_{{id}}_toggle_target">
-                                <i class="fa" aria-hidden="true"></i>
-                            </button>
-                        </div>
-                        <div id="map_killzonessidebar_killzone_{{id}}_kill_area_label"
-                             class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}"
-                             data-haskillarea="{{ has_kill_area }}">
-                            <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
-                                    class="btn btn-primary" data-toggle="button" aria-pressed="false">
-                                <i class="fas fa-bullseye"></i>
-                            </button>
-                        </div>
-                        <button id="map_killzonessidebar_killzone_{{id}}_color"
-                                class="btn map_killzonessidebar_color_btn w-100">
 
-                        </button>
-                        <div class="input-group-append ml-1" data-toggle="tooltip" title="{{delete_killzone_label}}">
-                            <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
-                                <i class="fa fa-trash"></i>
-                            </div>
-                        </div>
-                    </div>
+                <div id="map_killzonessidebar_killzone_{{id}}_grip" class="col-auto pt-2" style="font-size: 1.3em">
+                    <i class="fas fa-grip-vertical"></i>
                 </div>
             </div>
+
             <div id="map_killzonessidebar_killzone_{{id}}_toggle_target" class="collapse">
                 <div id="map_killzonessidebar_killzone_{{id}}_enemy_list" class="input-group mb-1">
 
+                </div>
+
+                <div class="row mb-1">
+                    <div class="col">
+                        <div class="input-group">
+                            <div id="map_killzonessidebar_killzone_{{id}}_kill_area_label"
+                                 class="input-group-prepend mr-1" data-toggle="tooltip" title="{{add_kill_area_label}}"
+                                 data-haskillarea="{{has_kill_area}}">
+                                <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
+                                        class="btn btn-primary" data-toggle="button" aria-pressed="false">
+                                    <i class="fas fa-bullseye"></i>
+                                </button>
+                            </div>
+                            <button id="map_killzonessidebar_killzone_{{id}}_color"
+                                    class="btn map_killzonessidebar_color_btn w-100">
+
+                            </button>
+                            <div class="input-group-append ml-1" data-toggle="tooltip"
+                                 title="{{delete_killzone_label}}">
+                                <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
+                                    <i class="fa fa-trash"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
