#318 Minor text fixes

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -22,7 +22,7 @@
 
                 <div id="map_killzonessidebar_killzone_{{id}}_has_boss" class="col-auto p-2"
                      data-toggle="tooltip" title="{{kill_zone_has_boss_label}}">
-                    <img src="/images/mapicon/raid_marker_skull.png" style="width: 16px; height: 16px;" />
+                    <img class="mt-1" src="/images/mapicon/raid_marker_skull.png" style="width: 16px; height: 16px;" />
                 </div>
 
                 <div id="map_killzonessidebar_killzone_{{id}}_grip" class="col-auto pt-2" style="font-size: 1.3em">
