--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -1,12 +1,12 @@
 <div class="{{root_classes}}" style="position: relative;">
     {{#each modifiers}}
-    <div class="modifier {{classes}}" style="left: {{left}}px; top: {{top}}px;">
+    <div id="map_enemy_visual_attribute_{{name}}_{{id}}" class="modifier {{classes}}" style="left: {{left}}px; top: {{top}}px;">
         {{{html}}}
     </div>
     {{/each}}
-    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
-        <div class="outer {{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}}; border: {{outer_border}};">
-            <div class="inner {{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;">
+    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
+        <div id="map_enemy_visual_{{id}}_outer" class="outer {{main_visual_outer_classes}}" style="border: {{outer_border}};">
+            <div id="map_enemy_visual_{{id}}_inner" class="inner {{main_visual_inner_classes}}" style="margin: {{margin}}px;">
                 {{{main_visual_html}}}
             </div>
         </div>
