#384 Teeming can now properly be changed on every single route.

--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -2,7 +2,7 @@
     <span id="map_enemy_forces_numbers">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
-        <span id="map_enemy_forces_count">0</span>/{{enemy_forces_total}} (<span
+        <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span> (<span
             id="map_enemy_forces_percent">0</span>%)
     </span>
 </div>
