#372 Killing awakened enemies with the last boss is now supported.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -52,9 +52,9 @@
                             </button>
                             <div class="input-group-append ml-1" data-toggle="tooltip"
                                  title="{{delete_killzone_label}}">
-                                <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
+                                <button id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
                                     <i class="fa fa-trash"></i>
-                                </div>
+                                </button>
                             </div>
                         </div>
                     </div>
