--- a/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
+++ b/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
@@ -1,16 +1,16 @@
 {{#each info}}
     <div class="row">
-        <div class="col font-weight-bold">
+        <div class="col-6 font-weight-bold">
             {{key}}
         </div>
-        <div class="col">
+        <div class="col-6">
             {{#ifCond value '===' 1}}
                 <span class="text-success"><i class="fas fa-check-circle"></i></span>
             {{else}}
                 {{#ifCond value '===' 0}}
                     <span class="text-danger"><i class="fas fa-times-circle"></i></span>
                 {{else}}
-                    {{value}}
+                    {{{value}}}
                 {{/ifCond}}
             {{/ifCond}}
         </div>
