#240 Updated actions, added PHP ways of getting the release notes so pipelines can make use of them.

--- a/resources/assets/js/handlebars/release_copy_to_discord.handlebars
+++ b/resources/assets/js/handlebars/release_copy_to_discord.handlebars
@@ -6,7 +6,7 @@
 {{#each categories }}
 {{category}}:
 {{#each changes}}
-{{#ifCond ticket_id '>' 0 }}* #{{ticket_id}} {{/ifCond}}{{change}}
+* {{#ifCond ticket_id '>' 0 }}#{{ticket_id}} {{/ifCond}}{{change}}
 {{/each}}
 
 {{/each}}
