--- a/resources/assets/js/handlebars/map_controls_route_echo_member_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_echo_member_template.handlebars
@@ -1,4 +1,4 @@
-<li class="list-group-item p-2 m-1 echo_user_{{name}} user_color_{{name}}"
+<li class="list-group-item p-2 m-1 echo_user_{{slug}} user_color_{{slug}}"
     {{#if self}}
     data-toggle="tooltip" title="{{member_self_title_label}}"
     {{/if}}
