#424 Increased visibility of MDT import - also slightly updated the front page with a new dungeon selector for the demo routes.

--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -4,6 +4,10 @@
     color: #495057;
 }
 
+.bg-dark {
+    background-color: #2B3E50 !important;
+}
+
 .border-dark {
     border-color: #2B3E50 !important;
 }
