#441 Enemies can now be marked as Inspiring. Updated mapping to reflect the changes.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -688,6 +688,12 @@ html, body, #map, #app, .wrapper {
     border-radius: 18px;
 }
 
+.inspiring {
+    background: white url('/images/enemymodifiers/inspiring.png') repeat center !important;
+    border: 1px black solid;
+    border-radius: 18px;
+}
+
 
 /*.enemy_icon_npc_type.beguiling {*/
 /*    border: #7f2480 2px solid !important;*/
