#443 Prideful affix is almost supported. Just need some more details such as deleting and proper disabling of the button if the limit is reached.

--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -4,7 +4,7 @@
     </div>
     <div class="col p-1 ml-1 mr-1" style="display: flex; justify-content: center; align-items: center;">
         <div class="text-center">
-            <i class="fas {{ fa_class }} "></i> {{ text }}
+            <i class="fas {{ fa_class }} "></i> <span class="button-text">{{ text }} </span>
         </div>
     </div>
 </div>
