#446 The Necrotic Wake is now available as a preview!

--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -16,6 +16,11 @@
     background-color: #58697A;
 }
 
+.dropdown .dropdown-header {
+    font-weight: bold;
+    color: #DF691A !important;
+}
+
 #map .dropdown-item:hover, .dropdown-item:focus {
     color: black;
 }
