#437 Enemies may now be marked as unskippable. Not killing all unskippable enemies will prevent you from publishing your route.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -575,6 +575,10 @@ html, body, #map, #app, .wrapper {
     opacity: 40%;
 }
 
+.map_enemy_visual_fade.unskippable {
+    opacity: 80%;
+}
+
 .enemy_icon_npc_mdt {
     background-color: hotpink;
 }
