--- a/resources/assets/js/handlebars/map_popup_type_bool_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_bool_template.handlebars
@@ -6,5 +6,8 @@
         {{#ifCond value '===' 1 }}
            checked="checked"
         {{/ifCond}}
+        {{#ifCond value '===' true }}
+           checked="checked"
+        {{/ifCond}}
     />
 </div>
