--- a/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
+++ b/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
@@ -1,7 +1,7 @@
 {{#each info}}
     <div class="row">
         <div class="col-6 font-weight-bold">
-            {{key}}
+            {{key}}:
         </div>
         <div class="col-6">
             {{#ifCond value '===' 1}}
